	  tick passed since the start of the timer and thus if the value of the
	  oneshot counter is correct. I also tried to use the function
	  up_timer_gettime(…) to achieve this but, at least if compiled with no
	  optimization the problem vanishes without using the value of the
	  function, the function call takes too long.
	  Another problem treated in the fix is that if the oneshot timer/counter
	  is canceled, we only know the remaining time with a precision of
	  USEC_PER_TICK microseconds. This means the calculated remaining time
	  is between 0 and USEC_PER_TICK microseconds  too long. To fix this I
	  subtract one tick if the calculated remaining time is greater than one
	  tick and otherwise set the remaining time to zero. By doing so the
	  measured times are much more precise as without it.  From Stefan Kolb
	  (2016-05-27).
	* arch/arm/src/sama5:  Stefan Kolb's change to the SAMV7 Oneshot Timer
	  should also be applied to the SAMA5 oneshot time since the drivers are
	  identical (2016-05-27).
	* arch/arm/src/stm32l4: Add support for SPI 4 and 5 on stm32f411 chips.
	  From Konstantin Berezenko (2016-05-27).
	* arch/arm/src/sam34:  Stefan Kolb's change to the SAMV7 Oneshot Timer
	  should also be applied to the SAM3/4 oneshot time since the drivers
	  are identical (2016-05-29).
	* arch/arm/src/stm32: Allow to not use all channel in a lower part of
	  PWM.  From Pierre-noel Bouteville (2016-05-30).
	* libc/math: Add a NAN test on 'x' in asin function of lib_asin.c.
	  Suggested by Pierre-noel Bouteville (2016-05-31).
	* arch/arm/src/stm32: Fix logic in F4 RTCC driver that prevent ALARM
	  interrupt.  From Neil Hancock (2016-05-31).
	* arch/arm/src/stm32: Fix STM32 ValueLine ADC IRQ number selection.
	  From David Sidrane (2016-05-31).
	* arch/arm/src/samv7: Fix missing unlock of device in MCAN
	  mcan_txempty().  From Frank Benkert (2016-06-01).

7.17 2016-xx-xx Gregory Nutt <gnutt@nuttx.org>