@@ -299,17 +299,6 @@ FAR struct mtd_dev_s *mtd_rwb_initialize(FAR struct mtd_dev_s *mtd);
 int ftl_initialize(int minor, FAR struct mtd_dev_s *mtd);
 
 /****************************************************************************
- * Name: flash_eraseall
- *
- * Description:
- *   Call a block driver with the MTDIOC_BULKERASE ioctl command.  This will
- *   cause the MTD driver to erase all of the flash.
- *
- ****************************************************************************/
-
-int flash_eraseall(FAR const char *driver);
-
-/****************************************************************************
  * Name: smart_initialize
  *
  * Description:
